# dominion_earth

./: .prettierrc  BRP_TOOLS_REFERENCE.md  BRP_WORKFLOW_SUMMARY.md  Cargo.toml  README.md  brp_workflow_guide.sh  demo_brp_workflow.sh  install-mcp.sh  test_coast_logic.rs
.github/: copilot-instructions.md
.github/chatmodes/: beast_mode.chatmode.md
.github/instructions/: architecture.instructions.md  bevy_brp_tools.instructions.md  ui_development.instructions.md
.github/prompts/: apply_bevy_examples_standard.md  apply_bevy_examples_standard.prompt.md  apply_coding_standard.prompt.md
ai_planner/: Cargo.toml
ai_planner/src/: ai_coordinator.rs  constants.rs  goap.rs  htn_planner.rs  lib.rs  utility_ai.rs
assets/data/: civilizations.ron  technologies.ron  terrain.ron  units.ron
assets/saves/: quicksave.scn.ron
core_sim/: Cargo.toml
core_sim/src/: combat.rs  components.rs  components_new.rs  constants.rs  data_loader.rs  debug_utils.rs  diplomacy.rs  economy.rs  influence_map.rs  lib.rs  pathfinding.rs  resource_loading.rs  resources.rs  serialization.rs  systems.rs  tile.rs  tile_components.rs  tile_passes.rs  world_gen.rs
core_sim/src/components/: action_queue.rs  ai.rs  city.rs  civilization.rs  diplomacy.rs  fog_of_war.rs  military.rs  mod.rs  orders.rs  player.rs  position.rs  production.rs  rendering.rs  terrain.rs  turn_phases.rs
core_sim/src/systems/: action_queue.rs  ai_decision.rs  economic_update.rs  fog_of_war.rs  mod.rs  movement.rs  production.rs  turn_management.rs
core_sim/src/tile/: mod.rs  tile_assets.rs  tile_components.rs  tile_passes.rs
docs/: action_queue_system.md  audio_system.md  bevy_hui_migration_guide.md  fog_of_war.md  menu_system.md  menu_visibility_fix.md  moonshine_save_integration_summary.md  mvc_save_architecture.md  optimization_suggestions.md  save_load_troubleshooting.md  ui_labels.md  ui_panel_implementation_guide.md  ui_scrolling_implementation.md
docs/bevy_examples/: examples_downloader.sh
dominion_earth/: Cargo.toml
dominion_earth/assets/data/: civilizations.ron  units.ron
dominion_earth/assets/saves/: README.md  quicksave.scn.ron
dominion_earth/assets/tiles/: sprite-sheet.aseprite
dominion_earth/assets/ui/: civilizations_list.html  game_panel.html  header.html  left_side_panel.html  main_layout.html  minimap.html  production_menu.html  resources_panel.html  right_side_panel.html  statistics_panel.html  tile_info.html  top_panel.html
dominion_earth/assets/ui/components/: capital_label.html
dominion_earth/assets/ui/components/left_side_panel/: game_panel.html  production_menu.html
dominion_earth/assets/ui/components/right_side_panel/: civilizations_list.html  hovered_tile_info.html  production_menu.html  tile_info.html  unit_info.html
dominion_earth/assets/ui/components/top_panel/: left_side_top.html
dominion_earth/src/: ai_decision_systems.rs  audio.rs  civilization_spawning.rs  constants.rs  debug_utils.rs  entity_utils.rs  game.rs  headless.rs  input.rs  isometric_tilemap.rs  main.rs  main_new.rs  production_input.rs  rendering.rs  settings.rs  ui.rs  unit_assets.rs
dominion_earth/src/input/: constants.rs  coordinates.rs  keyboard.rs  mod.rs  mouse.rs  tile_selection.rs  tile_selection_new.rs  tile_selection_old.rs  unit_interaction.rs
dominion_earth/src/menus/: credits.rs  game_setup.rs  main.rs  mod.rs  pause.rs  settings.rs  ui_visibility.rs
dominion_earth/src/plugins/: audio.rs  camera.rs  civilization_audio.rs  core_simulation.rs  input_handling.rs  inspector.rs  menu.rs  mod.rs  rendering.rs  resources.rs  save_load.rs  ui_integration.rs
dominion_earth/src/rendering/: fog_of_war.rs  mod.rs  tile_assets.rs  tile_components.rs
dominion_earth/src/rendering/borders/: mod.rs
dominion_earth/src/rendering/capitals/: mod.rs
dominion_earth/src/rendering/common/: mod.rs
dominion_earth/src/rendering/tilemap/: mod.rs
dominion_earth/src/rendering/units/: mod.rs
dominion_earth/src/screens/: game_setup.rs  gameplay.rs  main_menu.rs  mod.rs  splash.rs
dominion_earth/src/theme/: constants.rs  interaction.rs  mod.rs  palette.rs  widget.rs
dominion_earth/src/ui/: bevy_hui_impl.rs  capital_labels.rs  constants.rs  game_panel.rs  left_panel.rs  left_panel_constants.rs  minimap.rs  mod.rs  production_menu.rs  resources.rs  right_panel.rs  statistics_panel.rs  system_setup.rs  tile_info.rs  top_panel.rs  traits.rs  unit_labels.rs  utilities.rs
dominion_earth/src/ui/bevy_hui/: capital_labels.rs  constants.rs  main_ui.rs  mod.rs  production_orders.rs  property_updates.rs  scroll_setup.rs
dominion_earth/src/ui/left_panel/: constants.rs  mod.rs  production_section.rs  unit_info_section.rs
dominion_earth/src/ui/right_panel/: civilizations_section.rs  constants.rs  hovered_tile_section.rs  mod.rs  statistics_section.rs
dominion_earth/src/ui/top_panel/: constants.rs  mod.rs  resources_section.rs  turn_section.rs
saves/: quicksave.ron  quicksave.scn.ron
tests/: ai_integration_test.rs
