[workspace]
members = [
    "dominion_earth",
    "core_sim",
    "ai_planner",
]
resolver = "2"


[workspace.dependencies]
bevy = { version = "0.16", features = ["bevy_remote", "png"] }
bevy_ecs = "0.16"
bevy_brp_extras = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
rand = "0.8"
rand_pcg = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bevy_egui = "0.36"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
incremental = false
debug = false

[profile.dev]
opt-level = 1
