[package]
name = "core_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = { workspace = true }
bevy_ecs_tilemap = "0.16"
bevy = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"