[package]
name = "core_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.16"
bevy_reflect = "0.16"
bevy_log = "0.16"
bevy = { version = "0.16", default-features = false }
bevy_ecs_tilemap = "0.16"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
noise = "0.9"
rand = "0.8"
rand_pcg = "0.3"
serde_json = "1.0"
tracing = "0.1"
moonshine-save = "=0.5.2"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
# Bevy ECS systems use dependency injection, allowing many arguments.
too_many_arguments = "allow"
# ECS queries and components can have complex types.
type_complexity = "allow"
# Make sure macros use their standard braces.
nonstandard_macro_braces = "warn"