[package]
name = "dominion_earth"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["default"] }
bevy_egui = { workspace = true }
core_sim = { path = "../core_sim" }
ai_planner = { path = "../ai_planner" }
serde = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }
