[package]
name = "dominion_earth"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["default", "bevy_remote", "png"] }
bevy_egui = { workspace = true }
bevy_brp_extras = { workspace = true }
core_sim = { path = "../core_sim" }
ai_planner = { path = "../ai_planner" }
serde = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
clap = { workspace = true, features = ["derive"] }
bevy_ecs_tilemap = "0.16"
bevy_framepace = "0.19.1"
